Catch All Exceptions

--- a/android/engine/src/main/res/values/strings.xml
+++ b/android/engine/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name="initializing">Initializing settings &#8230;</string>
     <string name="username_sample" translatable="false">e.g JohnDoe</string>
     <string name="percentage_progress" translatable="false">%1$d%%</string>
+    <string name="error_occurred" translatable="false">Something went wrong...</string>
 </resources>
