--- a/docs/developer-setup/automated-releases.mdx
+++ b/docs/developer-setup/automated-releases.mdx
@@ -1,22 +1,37 @@
 # Releases
 
+The OpenSRP FHIR Core releases occur at most once every 2 weeks, i.e. at the conclusion of a sprint. The release process follows the [gitlab flow](https://docs.gitlab.com/ee/topics/gitlab_flow.html#release-branches-with-gitlab-flow) style described in the following diagram:
+
+![gitlab flow diagram](../assets/gitlabflow.png)
+
+This allows changes to occur on the release branch while unrelated code continues being merged into main. Specifically, release follow the following steps:
+1. Code freeze: the creation of a branch for the release version as well as the first release candidate (labeled RC1).
+    * For example, for release version v0.2.0 a branch opensrp-0.2.0 is create and a pre-release opensrp-0.2.0-rc1
+1. Candidate progression: This is followed by 1-2 weeks of QA and error fixing
+    * Whenever we find an error in the candidate, a pull request with a fix for the error is opened against the release branch (e.g. v0.2.0) and against the main branch.
+    * Once the error is fixed and merged into the release branch (multiple errors can be batched) a new pre-release is created, e.g. opensrp-0.2.0-rc2
+1. Final release: when the release meets requirements, a final release, opensrp-0.2.0 is created, with a tag v0.2.0.
+
+
+## Release automation with tags
+
 As part of integrating Continuous Delivery(CD) into the development lifecycle, CI is set up to generate an APK.
 
 The configuration requires the tag to:
-* Have a _prefix_ in the format `v[0-9]+.[0-9]+.[0-9]+[0-9a-zA-Z.-]+`
-* Followed by the specific product flavor name _e.g. quest, g6pd, ecbis e.t.c_
-* One can then add a suitable _suffix_ depending on the release e.g. `-alpha`, `-rc`, `-beta` e.t.c
+* The product name: _opensrp_
+* Followed by the _version_ in the format `[0-9]+.[0-9]+.[0-9]+[0-9a-zA-Z.-]+`
+* Followed by an optional _suffix_ depending on the release e.g. `-alpha`, `-rc`, `-beta` e.t.c
 
 The following are all valid tags that will trigger the generation of a release APK
-> - v1.2.0-quest
-> - v1.2.0-quest-alpha
-> - v1.2.0-g6pd-beta
-> - v1.2.0-quest-rc1
+> - opensrp-1.2.0
+> - opensrp-1.2.0-alpha
+> - opensrp-1.2.0-beta
+> - opensrp-1.2.0-rc1
 
-**Note:** e.g. when creating a tag for the _quest version 1.2.0_, use the command:
+**Note:** e.g. when creating a tag for the _OpenSRP Version 1.2.0_, use the command:
 
 ```
-git tag -a v1.2.0-quest -s  && git push origin v1.2.0-quest
+git tag -a opensrp-1.2.0 -s  && git push origin opensrp-1.2.0
 ```
 
 When you run the command, you will be prompted to _add a message_. The message should be of the format:
@@ -30,8 +45,8 @@ When you run the command, you will be prompted to _add a message_. The message s
 ## Deleting a tag
 Sometimes you may want to delete a tag, e.g. if you push an incorrect tag, need to update the tag message etc.
 
-For example, to delete the v1.2.0-quest tag run the command:
+For example, to delete the opensrp-1.2.0 tag run the command:
 
 ```
-git push --delete origin v1.2.0-quest && git tag --delete v1.2.0-quest
+git push --delete origin opensrp-1.2.0 && git tag --delete opensrp-1.2.0
 ```
