--- a/docs/advanced-fhir/fhir_path.mdx
+++ b/docs/advanced-fhir/fhir_path.mdx
@@ -64,7 +64,7 @@ Variable expressions can be defined at the questionnaire and questionnaire item 
 ```
 #### API to evaluate variable expressions defined at the questionnaire level
 To evaluate variable expressions defined at Questionnaire level, we have to pass a variable expression, Questionnaire, QuestionnaireResponse and an optional varaiblesMap
-```
+```kotlin
  internal fun evaluateQuestionnaireVariableExpression(
     expression: Expression,
     questionnaire: Questionnaire,
