--- a/docs/developer-setup/automated-releases.mdx
+++ b/docs/developer-setup/automated-releases.mdx
@@ -1,17 +1,28 @@
+import gitlabflow from '../assets/gitlabflow.png';
+
 # Releases
 
-The OpenSRP FHIR Core releases occur at most once every 2 weeks, i.e. at the conclusion of a sprint. The release process follows the [gitlab flow](https://docs.gitlab.com/ee/topics/gitlab_flow.html#release-branches-with-gitlab-flow) style described in the following diagram:
+OpenSRP FHIR Core releases occur at most once every 2 weeks, i.e. at the conclusion of a sprint. The release process follows the [gitlab flow](https://docs.gitlab.com/ee/topics/gitlab_flow.html#release-branches-with-gitlab-flow) style described in the following diagram:
 
-![gitlab flow diagram](../assets/gitlabflow.png)
+<img src={gitlabflow} style={{margin: "2em auto", display:"block"}} />
 
-This allows changes to occur on the release branch while unrelated code continues being merged into main. Specifically, release follow the following steps:
-1. Code freeze: the creation of a branch for the release version as well as the first release candidate (labeled RC1).
-    * For example, for release version v0.2.0 a branch opensrp-0.2.0 is create and a pre-release opensrp-0.2.0-rc1
+This allows changes to occur on the code release branch while unrelated code continues being merged into main.
+
+# Code Releases
+
+We conduct code releases with the following steps:
+
+1. Code freeze: the creation of a branch for the code release version as well as the first code release candidate (labeled RC1).
+    * For example, for code release version `v0.2.0`, create a branch `opensrp-0.2.0`, a pre-release `opensrp-0.2.0-rc1`, and a tag `opensrp-0.2.0-rc1`
 1. Candidate progression: This is followed by 1-2 weeks of QA and error fixing
-    * Whenever we find an error in the candidate, a pull request with a fix for the error is opened against the release branch (e.g. v0.2.0) and against the main branch.
-    * Once the error is fixed and merged into the release branch (multiple errors can be batched) a new pre-release is created, e.g. opensrp-0.2.0-rc2
-1. Final release: when the release meets requirements, a final release, opensrp-0.2.0 is created, with a tag v0.2.0.
+    * Whenever we find an error in the candidate, open a pull request with a fix for the error against the code release branch (e.g.  `v0.2.0`) and against the `main` branch.
+    * Once the error is fixed and merged into the code release branch (multiple errors can be batched), create a new pre-release and tag, e.g. `opensrp-0.2.0-rc2`
+1. Repeat step (2.) until QA passes, e.g. with more pre-releases and tags, `opensrp-0.2.0-rc3`, ...
+1. Final code release: when the release meets requirements, a final code release, `opensrp-0.2.0` is created, with a tag `v0.2.0`.
 
+# APK Releases
+
+Once a final code release is created, attach a generic flavor APK release e.g. `opensrp-0.2.0.apk` to the release. In addition, attach APK releases for any specific flavors requested, e.g. `opensrp-0.2.0-bunda.apk`, `opensrp-0.2.0-ecbis.apk`, `opensrp-0.2.0-wdf.apk`
 
 ## Release automation with tags
 
