--- a/android/quest/src/main/res/values/strings.xml
+++ b/android/quest/src/main/res/values/strings.xml
@@ -125,10 +125,8 @@
     <string name="patient_phone_owner_1">Patient Phone Owner 1</string>
 
     <string name="guardian_relation">Guardian Relationship</string>
-    <string name="guardian_phone_number_1">Guardian Phone Number 1</string>
-    <string name="guardian_phone_owner_1">Guardian Phone Owner 1</string>
-    <string name="guardian_phone_number_2">Guardian Phone Number 2</string>
-    <string name="guardian_phone_owner_2">Guardian Phone Owner 2</string>
+    <string name="guardian_phone_number">Guardian Phone Number %1$s</string>
+    <string name="guardian_phone_owner">Guardian Phone Owner %1$s</string>
     <string name="tracing_history_details">Tracing History Details</string>
 
 
