--- a/android/engine/src/main/res/values/strings.xml
+++ b/android/engine/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="logout_user">Log out as %1$s</string>
     <string name="sync_completed">Sync complete</string>
     <string name="syncing">Syncing</string>
+    <string name="syncing_up" translatable="false">Syncing up</string>
+    <string name="syncing_down" translatable="false">Syncing down</string>
     <string name="syncing_initiated">Sync initiated&#8230;</string>
     <string name="sync_failed">Sync failed. Check internet connection or try again later.</string>
     <string name="sync_unauthorised">Sync failed because the authentication credentials are invalid.</string>
