--- a/docs/developer-setup/automated-releases.mdx
+++ b/docs/developer-setup/automated-releases.mdx
@@ -1,10 +1,9 @@
-import gitlabflow from '../assets/gitlabflow.png';
-
 # Releases
 
 OpenSRP FHIR Core releases occur at most once every 2 weeks, i.e. at the conclusion of a sprint. The release process follows the [gitlab flow](https://docs.gitlab.com/ee/topics/gitlab_flow.html#release-branches-with-gitlab-flow) style described in the following diagram:
 
-<img src={gitlabflow} style={{margin: "2em auto", display:"block"}} />
+
+![](../assets/gitlabflow.png)
 
 This allows changes to occur on the code release branch while unrelated code continues being merged into main.
 
