--- a/docs/scheduling-tasking/plan-definiton.mdx
+++ b/docs/scheduling-tasking/plan-definiton.mdx
@@ -1,4 +1,4 @@
-**Applying a PlanDefinition** 
+### Applying a PlanDefinition
 
 
 A [PlanDefinition](https://hl7.org/fhir/R4/plandefinition.html) is a pre-defined group of actions to be taken in particular circumstances, often including conditional elements, options, and other decision points. The resource is flexible enough to be used to represent a variety of workflows, as well as clinical decision support and quality improvement assets, including order sets, protocols, and decision support rules. 
