--- a/docs/scheduling-tasking/plan-definiton.mdx
+++ b/docs/scheduling-tasking/plan-definiton.mdx
@@ -50,7 +50,7 @@ Below is a detailed description of notable properties of PlanDefinition and its 
         - subject : The Patient or Group for which this Plan is running
         - period: The evaluated `executionPeriod` for ActivityDefinition
         - version: The index of Task evaluated by ActivityDefinition `timing` or 1 by default
-      - example: 
+      - Below is an example of a StructureMap to extract Refferal Tasks
       
       ````map
       map "http://hl7.org/fhir/StructureMap/ab62f8e8-e6d8-4ffb-b460-64b23e89b370" = 'eCBIS Pregnancy Referral'
