--- a/docs/configurations/widgets/widget-config.mdx
+++ b/docs/configurations/widgets/widget-config.mdx
@@ -204,7 +204,7 @@ Displays Patient's details ,other related services and tasks. The details field 
 ``` 
 
 
-## Config properties of COMPOUND_TEXT
+## Config properties of SERVICE_CARD
 |Property | Description | Required | Default |
 |--|--|:--:|:--:|
 viewType | First viewType should be a list. This will help in iterating over the data to display | Yes | [ViewType.SERVICE_CARD]|
@@ -223,3 +223,50 @@ servicememberIcons | A String value that represents the icons for the service me
 serviceButton | A ButtonProperties object that represents a button displayed in the service card | Yes | null |
 services | A list of ButtonProperties that represent the services associated with the service card | yes | null |
 actions | A list of ActionConfig objects that represent the actions that can be performed on the service card | yes | emptyList() |
+
+## COLUMN widgets
+The column widgets are used to create a vertical layout container that can hold multiple child views. The purpose of the "COLUMN" is to arrange child views in a vertical column, with the child views stacked on top of one another in the order in which they are added.
+
+ ``` json
+ {
+                  "viewType": "COLUMN",
+                  "weight": 0.7,
+                  "children": [
+                    {
+                      "viewType": "COMPOUND_TEXT",
+                      "primaryText": "VIEW ALL",
+                      "primaryTextColor": "#006EB8",
+                      "clickable": true,
+                      "fontSize": 14.0,
+                      "primaryTextActions": [
+                        {
+                          "trigger": "ON_CLICK",
+                          "workflow": "LAUNCH_REGISTER",
+                          "id": "pncRegister",
+                          "display": "@{practitionerName} - PNC Register"
+                        }
+                      ]
+                    }
+                  ]
+                }
+ ``` 
+
+
+## Config properties of COLUMN
+|Property | Description | Required | Default |
+|--|--|:--:|:--:|
+viewType | First viewType should be a list. This will help in iterating over the data to display | Yes | [ViewType.COLUMN]|
+weight | A 'Float' value that represents the type of view. The weight is used to determine how much space the view should occupy in its parent container. |  | The default is 0 |
+backgroundColor | The background color of the view, specified as a string in the format "#RRGGBB" or "#AARRGGBB". If this property is null, the view will use its parent's background color. | No |  Null |
+padding | Offsets the content of the view by a specific number of pixels. This should be a number | No | 0 |
+borderRadius | Rounds the corners of the view's outer edge | | 0 |
+alignment | The alignment of the view withins its parent layout. This value is used to distribute the available space among multiple views | | [ViewAlignment.None]|
+fillMaxWidth | Dertimines whether the view should fill its parent's width | | false |
+fillMaxHeight | Determines whether the view should fill its parent's height | | false |
+clickable | Determines whether the view is clickable | | false |
+visible | A String value that determines whether the view should be visible | Yes| true |
+spacedBy | An integer value that represents the spacing between the children views of the column | | 8|
+wrapContent| A boolean value that represents whether the column should wrap its content or not | | false |
+arrangement | An enum value that represents the vertical arrangement of the child views of the column | | Null|
+children | A list of ViewProperties objects that represents the child views of the column | | emptyList()|
+
