--- a/docs/rules-engine/working-with-rules.mdx
+++ b/docs/rules-engine/working-with-rules.mdx
@@ -39,8 +39,8 @@ To extract specific data value in the sample JSON below, include **extractValue(
 |Property | Description | Required | Default |
 |--|--|:--:|:--:|
 name | Provides a descriptive name for the rule to be extracted | Yes | |
-condition | Indicates that the rule should always be evaluated | Yes | true|
-actions | Specifies the specific operations to be performed when the rule is evaluated | Yes
+condition | Indicates that the rule should always be evaluated | Yes | true |
+actions | Specifies the specific operations to be performed when the rule is evaluated | Yes | |
 
 The **"data.put()"** function is used to store the extracted data in a data object, using a key-value pair format.
 
