move android readme to getting started

--- a/docs/configurations/readme.mdx
+++ b/docs/configurations/readme.mdx
@@ -47,4 +47,4 @@ FHIR Core supports the following types of configurations:
 
 ## Troubleshooting
 - `Missing Resource ` - Check whether the referenced Binary resource exists in the server. Could be a typo in the Composition resource or you forgot include the Binary resource to the Composition section.
-- `Error loading configuration. Details : Key application is missing in the map` - Composition resource for the given application ID is missing.
+- `Error loading configuration. Details : Key application is missing in the map` - Composition resource for the given application ID is missing
