--- a/docs/report/cql-to-library-conversion.mdx
+++ b/docs/report/cql-to-library-conversion.mdx
@@ -1,8 +1,10 @@
 ## CQL Logic/Decision Library
 
-The CQL( Clinical Quality Language Specification) provides a way to define data querying, processing and logical expressions in a simplified and user friendly way. [Here](https://cql.hl7.org/01-introduction.html) is a detailed guide on CQL. Some example CQL scripts can be found [here](https://github.com/opensrp/fhir-resources/tree/main/ecbis/measure_cql).
-Since the CQL itself is a user friendly script rather than a parseable configuration or program, it needs a json or xml form that can be lexically parsed and understood by parser. Hence it is transformed into a json form called ELM(Expression Logical Model) aka json+elm. An xml form xml+elm is also used by we use json+elm for parsing fhircore libraries. See below to find the convertors.
-The translated elm and cql is then added to fhir Library resource [Library](http://hl7.org/fhir/R4/library.html) as base64 data to allow code to get the calculation for each variable and be able to be used by fhir compatible softwares.
+The Clinical Quality Language (CQL) Specification provides a way to define, data querying, processing and logical expressions in a simplified and user-friendly way. [Here](https://cql.hl7.org/01-introduction.html) is a detailed guide on CQL. Some example CQL scripts can be found [here](https://github.com/opensrp/fhir-resources/tree/main/ecbis/measure_cql).
+
+Since CQL itself is a user-friendly script rather than a parseable configuration or program, it needs a `JSON` or `XML` form that can be lexically parsed and understood by the parser. Thus, it is transformed into a JSON form called Expression Logical Model(ELM) aka `json+elm`. An XML form `xml+elm` is also used. In most cases, we shall be using `json+elm` for parsing FHIR Core libraries. 
+
+The translated `elm` and `cql` is then added to FHIR [Library](http://hl7.org/fhir/R4/library.html) resource as Base64 encoded data to allow the code to get the calculation for each variable and be able to be used by FHIR compatible software.
 
 Some resources to get details on CQL writing are below:
 
@@ -13,21 +15,35 @@ Some resources to get details on CQL writing are below:
 - CQL Sandbox is [here](https://sandbox.cqlab.io/ CQL sandbox)
 - CQL android editor app is [here](https://github.com/Path-Check/cql-editor-app/)
 
-A working example of CQL for a Measure is [here](https://github.com/opensrp/fhir-resources/blob/main/ecbis/measure_cql/household_measure_reporting.cql). Some notable lines are
+Here is a working example of CQL for a [Measure](http://hl7.org/fhir/measure.html)
 
-```
+````
 library HOUSEHOLDIND01 version '1'
-...
+
+using FHIR version '4.0.1'
+
 include "FHIRHelpers" version '4.0.1' called FHIRHelpers
-...
-// The Measure interval has closed boundaries. Read details https://cql.hl7.org/02-authorsguide.html#interval-values
+include "COMMON" version '1' called COMMON
+
 parameter "Measurement Period" Interval<DateTime>
+
 context Patient
-...
-define "All Groups": [Group] G where G.type = 'person'
+
+// to ensure that Measure Period with a closed boundary can be handled
+define "Filter Period": Interval("Measurement Period".low - 1 day , "Measurement Period".high + 1 day)
+
+define "All Groups": [Group] G
+    where G.type = 'person'
+    and First(G.identifier).period.start during "Filter Period"
+
 define "All Group Members": flatten("All Groups" G return (G.member M return M.entity))
-define "Group": "All Groups" G return G.id
-define "Group Member": "All Group Members" G where "Patient Id" = Split(G.reference, '/')[1]
+
+define "Group": "All Groups" G
+    return G.id
+
+define "Group Member": "All Group Members" G
+    where COMMON."IdPart"(Patient.id) = Split(G.reference, '/')[1]
+
 define "Patients": {Patient}
 
 define "Males": Patient.gender='male'
@@ -38,36 +54,40 @@ define "Age": CalculateAgeInYearsAt(Patient.birthDate, ToDate("Measurement Perio
 define "Age Stratifier":
   case
     when "Age" < 1 then 'P0Y'
-    ....
+    when "Age" in Interval[1,5] then 'P1-5Y'
+    when "Age" in Interval[6, 14] then 'P6-14Y'
+    when "Age" in Interval[15, 49] then 'P15-49Y'
+    when "Age" >= 50 then 'P50Y'
+    else 'Unspecified'
   end
-```
+````
 
-The variables in CQL can be referenced into Measure and/or PlanDefinition after adding the Library containing CQL as referenced Library.
+
+The variables in CQL can be referenced into a [Measure](http://hl7.org/fhir/measure.html) and/or [PlanDefinition](http://hl7.org/fhir/plandefinition.html) after adding the `Library` containing CQL as referenced Library.
 
 **Android FHIR SDK CQL Builder**
 
-SDK workflow testing module has [com.google.android.fhir.workflow.testing.CqlBuilder](https://github.com/google/android-fhir/blob/master/workflow-testing/src/main/java/com/google/android/fhir/workflow/testing/CqlBuilder.kt) which can do translation from a CQL to Library resource. This automatically does the elm conversion for you internally. 
+SDK workflow testing module has [com.google.android.fhir.workflow.testing.CqlBuilder](https://github.com/google/android-fhir/blob/master/workflow-testing/src/main/java/com/google/android/fhir/workflow/testing/CqlBuilder.kt) which can do translation from a `CQL` to `Library` resource. This automatically does the `elm` conversion for you internally. 
 
-Example usage can be seen in tests which can also be found [here](https://github.com/google/android-fhir/blob/master/workflow/src/test/java/com/google/android/fhir/workflow/FhirOperatorTest.kt#L150)
+An example usage can be seen in tests found [here](https://github.com/google/android-fhir/blob/master/workflow/src/test/java/com/google/android/fhir/workflow/FhirOperatorTest.kt#L150)
 
 ```
 val library = CqlBuilder.compileAndBuild(cqlScriptInputStream)
 ```
 
-**FhirCore CQL Testing Module**
+**FHIR Core CQL Testing Module**
 
-The [fhir-resources](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing) repository has a testing module which allows to not only get the complete Library resource to directly save to server but also allows to test the output and make changes on the fly. 
-Check the cucumber tests [Feature File](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing/fhircore-tests/src/androidTest/resources/measure-report/household-members.feature), the [Test Code File](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing/fhircore-tests/src/androidTest/kotlin/com/fhircore/resources/testing/measure/HouseholdMembersMeasureTest.kt#L28) and the [Convertor Util Method](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing/fhircore-tests/src/androidTest/kotlin/com/fhircore/resources/testing/CqlUtils.kt)
+The [fhir-resources](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing) repository has a testing module which allows to not only get the complete Library resource to directly save to the server but also allows to test the output and make changes on the fly. Check the cucumber tests [Feature File](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing/fhircore-tests/src/androidTest/resources/measure-report/household-members.feature), the [Test Code File](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing/fhircore-tests/src/androidTest/kotlin/com/fhircore/resources/testing/measure/HouseholdMembersMeasureTest.kt#L28) and the [Convertor Util Method](https://github.com/opensrp/fhir-resources/blob/main/fhircore-testing/fhircore-tests/src/androidTest/kotlin/com/fhircore/resources/testing/CqlUtils.kt)
 
 
-**Fhircore Tooling Library**
+**FHIR Core Tooling Library**
 
-Fhircore tooling library can also be used to get a Library by running commands
+FHIR Core tooling library can also be used to get a Library by running commands
 ```
 fct convert -t cql -i /some/path/Patient-1.0.0.cql
 ```
 
-Details on tool can be found [here](https://github.com/opensrp/fhircore-tooling#converting-library-cql-to-json)
+Details on the tool can be found [here](https://github.com/opensrp/fhircore-tooling#converting-library-cql-to-json)
 
 ##### Other possible but not recommended ways to get the translated elm+json
 
@@ -78,6 +98,6 @@ A [elm REST app](https://github.com/cqframework/cql-translation-service/blob/mas
 
 **CQL to ELM JAVA Translator**
 
-A [elm java app](https://github.com/cqframework/clinical_quality_language/blob/master/Src/java/READM.md) that can be used to elm translator on files and get an output. Instructions can be found [here](https://github.com/cqframework/cql-execution#to-execute-your-cql)
+Her is an [elm java app](https://github.com/cqframework/clinical_quality_language/blob/master/Src/java/READM.md) that can be used as an elm translator on related files and get an output. Instructions can be found [here](https://github.com/cqframework/cql-execution#to-execute-your-cql)
 
-***Note** : Above approaches output a json elm which then need to be base64 decoded and copied to the [Library](http://hl7.org/fhir/R4/library.html) content as Attachment.*
+**Note** : The above approaches output a `json-elm` which then needs to be Base64 decoded and copied to the [Library](http://hl7.org/fhir/R4/library.html) content as Attachment.
