--- a/docs/writing-fhir/cql/sample-usage.mdx
+++ b/docs/writing-fhir/cql/sample-usage.mdx
@@ -1,8 +1,6 @@
-## How are we using CQL?
+# CQL use cases
 
-### Use Case 1 : G6PD
-
-1. Threshold management
+## Use Case 1: G6PD Threshold management
 
 Plasmodium (P.) vivax is the most common species of malaria in countries close to eliminating the disease. The two commercially available drugs that can cure P. vivax are contraindicated for individuals with low levels of an enzyme called glucose-6-phosphate dehydrogenase (G6PD). G6PD deficiency is a genetic condition shared by 400 million people globally. Patients with G6PD deficiency are at risk of severe hemolysis upon exposure to tafenoquine or high primaquine doses required for cure of P. vivax malaria. PATH and our partners have advanced a point-of-care diagnostic device to measure G6PD activity. This test device, known as the STANDARD™ G6PD Test, is manufactured by SD Biosensor (South Korea) and is now commercially available in several malaria-endemic countries. This product could be enhanced through digital connectivity to improve its use and workflow including patient data management, accurate results interpretation, quality control, and patient referral and monitoring.
 
@@ -30,7 +28,7 @@ The following feature and modules were implemented
 4.  Offline Support
 5.  Multi-language support
 
-#### Additional context
+### Additional context
 
 For patient Diagnosis we used the following table to map the threshold evaluation
 
@@ -42,7 +40,7 @@ Post evaluation you get a results page with diagnosis and  Medication regimen re
 <img width="200" height="400" src ="https://user-images.githubusercontent.com/4829880/150296898-cfa97ad8-eee4-4cb2-9552-46f67b9765b2.jpg"/>
 <img width="200" height="400" src ="https://user-images.githubusercontent.com/4829880/150296901-ebc17aa2-b8d4-4695-88a1-d6ec8e6d7ab9.jpg"/>
 
-#### Sample G6PD threshold evaluation CQL
+### Sample G6PD threshold evaluation CQL
 
 ```
 //Declare name and version of lib
@@ -237,7 +235,7 @@ define "diagnosticReport": if "g6pdTestResultCode" is not null
 define "OUTPUT": List { "condition", "serviceRequest", "diagnosticReport" }
 ```
 
-#### MedicationRequest Output from above CQL evaluation
+### MedicationRequest Output from above CQL evaluation
 
 ```
 {
@@ -312,9 +310,7 @@ define "OUTPUT": List { "condition", "serviceRequest", "diagnosticReport" }
 }
 ```
 
-2. G6PD Test Device Calibration
-
-#### Sample G6PD RDT Calibration (Control mode) CQL
+## G6PD Test Device Calibration
 
 In the second use case, as a G6PD app user, I would like to check if the device is properly calibrated  in either Control Mode 1 or Control Mode 2
 
@@ -333,7 +329,7 @@ We then added a Questionnaire for test calibration that is independent of the Pa
 
 More details on testing and control mode can be found in [this manual](https://www.finddx.org/wp-content/uploads/2020/09/STANDARD-G6PD-test_Training_Bangladesh-FIND-icddr-Menzies_FINAL_26Nov19.pdf).
 
-**User Journey Description**
+### User Journey Description
 
 1. Add a menu item to initiate the control mode test
 2. Add a Questionnaire to be able to conduct control mode, similar to the Test Questionnaire, an image of control mode and the 2 entry points for G6PD and Haemoglobin level. This should have the following fields
@@ -351,7 +347,7 @@ More details on testing and control mode can be found in [this manual](https://w
 <img width="200" height="400" src="https://user-images.githubusercontent.com/4829880/149816323-0afb2558-35a4-47fd-9da5-88cb668f0d14.jpg"/>
 <img width="200" height="400" src="https://user-images.githubusercontent.com/4829880/149816328-b2841f26-4560-4613-8fd0-cd1bfe707967.jpg"/>
 
-**Sample G6PD RDT Calibration (Control mode) CQL**
+### Sample G6PD RDT Calibration (Control mode) CQL
 
 ```
 //Declare name and version of lib
@@ -423,8 +419,7 @@ define "Conclusion Details": '\nDetails:\n'+ "G6PD Conclusion" + '\n' + "Haemogl
 define "OUTPUT": List { "Conclusion" , "Conclusion Details"}
 ```
 
-### Use Case 2 : In app reporting of Indicators
-
+## In app reporting of Indicators
 
 Based on the [WHO Implementation Guide (IG) for ANC](http://build.fhir.org/ig/WorldHealthOrganization/smart-anc/) and the [WHO SMART ANC Indicators](https://github.com/WorldHealthOrganization/smart-anc/tree/master/input/cql). These indicators are based on the Global ANC monitoring framework (25) and the WHO–UNICEF guidance for RMNCAH programme managers on the analysis and use of health facility data (10). These indicators may be aggregated automatically from the digital tracking tool to populate a digital HMIS, such as DHIS2.
 
@@ -432,11 +427,11 @@ Indicator definitions are represented using the FHIR Measure resource (CPGMetric
 
 Indicator definitions are represented using the FHIR Measure Resource [CPGMetric profile](http://build.fhir.org/ig/WorldHealthOrganization/smart-anc/documentation.html#indicators).
 
-**2. Using Measure Reporting to define Indicators**
+### Using Measure Reporting to define Indicators
 
-**Sample Measure Reporting CQL (Household count)**
+Below are Sample Measure Reporting CQL for aggregate counts for households.
 
-**Family Group**
+#### Family Group
 
 ```
 {
@@ -483,7 +478,7 @@ Indicator definitions are represented using the FHIR Measure Resource [CPGMetric
 }
 ```
 
-**Measure Reporting CQL Expression**
+#### Measure Reporting CQL Expression
 
 ```
 //Declare name and version of lib
@@ -521,7 +516,7 @@ define "Age Stratifier":
   end
 ```
 
-**Measure Report Generated**
+#### Measure Report Generated
 
 ```
 {
@@ -1158,11 +1153,3 @@ define "Age Stratifier":
   ]
 }
 ```
-
-## Issues Identified when executing CQL
-
-CQL scripts when run first time take too long to run. Look into libraries or classes it loads first time and move those to Application startup.
-
-## Solution
-
-Pre-load libraries.
