--- a/android/engine/src/main/res/values/strings.xml
+++ b/android/engine/src/main/res/values/strings.xml
@@ -107,6 +107,8 @@
     <string name="eCBIS_app_name" translatable="false">eCBIS</string>
     <string name="invalid_login_credentials">username or password is invalid</string>
     <string name="invalid_form_id">"Invalid form id attached"</string>
+    <string name="multi_user_login_attempt">Attempted to login with a different provider</string>
+    <string name="error_fetching_user_details">Failed to fetch user details</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
     <string name="required_constraint_validation_error_msg">There is no response to the required field.</string>
