--- a/docs/developer-setup/automated-releases.mdx
+++ b/docs/developer-setup/automated-releases.mdx
@@ -36,7 +36,7 @@ Release notes can be viewed in the [changelog](https://github.com/opensrp/fhirco
 
 ## Code releases
 
-To conduct code a release follow the below steps:
+To conduct a code release follow the below steps:
 
 1. Open and merge a PR to update the project version to the current release version
     * e.g. change the `versionName` in the Quest [build.gradle](https://github.com/opensrp/fhircore/blob/main/android/quest/build.gradle#L28) file to `v0.2.0`
