Update sample app configs
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/translations/strings_sw_config.properties
+++ b/android/quest/src/main/assets/configs/app/translations/strings_sw_config.properties
@@ -18,3 +18,7 @@ transfer.data=Hamisha Data
 profile=Wasifu
 add.family=Ongeza Familia
 add.member=Ongeza Mwana Familia
+map=Ramani
+assign.new.family.head=Mkabidhi Kinara mpya wa familia
+abort.operation.question=Je, una uhakika unataka kukomesha operesheni hii?
+select.new.family.head=Chagua Kinara mpya wa familia
