--- a/android/quest/src/mpower/res/values/strings.xml
+++ b/android/quest/src/mpower/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name" translatable="false">mPower</string>
+    <string name="app_name" translatable="false">fhir HA</string>
     <string name="authenticator_account_type" translatable="false">org.smartregister.fhircore.mpower</string>
 </resources>
